WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65575
Chromium Mac: Fix position of search tickmarks
https://bugs.webkit.org/show_bug.cgi?id=65575
Summary
Chromium Mac: Fix position of search tickmarks
Sailesh Agrawal
Reported
2011-08-02 14:59:15 PDT
Chromium Mac: Fix position of search tickmarks
Attachments
Patch
(2.86 KB, patch)
2011-08-02 15:04 PDT
,
Sailesh Agrawal
no flags
Details
Formatted Diff
Diff
Patch
(2.90 KB, patch)
2011-08-03 14:34 PDT
,
Sailesh Agrawal
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sailesh Agrawal
Comment 1
2011-08-02 15:04:25 PDT
Created
attachment 102704
[details]
Patch
James Robinson
Comment 2
2011-08-03 14:28:19 PDT
Comment on
attachment 102704
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=102704&action=review
> Source/WebCore/ChangeLog:8 > +
https://bugs.webkit.org/show_bug.cgi?id=65575
> + > + This change adjusts the position of search tickmarks so that they are correctly centered. > + > + Also, insetting the tickmark rect by 5 pixels caused tickmarks on the overlay scrollbar to look very small. I changed this to inset by 4 pixels instead. The tickmark is the same width as the overlay scrollbar which looks much better.
You need a 'Reviewed by' line. Is this behavior different from the mac scrollbar theme?
Sailesh Agrawal
Comment 3
2011-08-03 14:30:08 PDT
> Is this behavior different from the mac scrollbar theme?
Tickmarks are specific to chromium, the mac theme doesn't have them.
Sailesh Agrawal
Comment 4
2011-08-03 14:34:18 PDT
Created
attachment 102827
[details]
Patch
Sailesh Agrawal
Comment 5
2011-08-03 14:35:00 PDT
Comment on
attachment 102704
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=102704&action=review
>> Source/WebCore/ChangeLog:8 >> + Also, insetting the tickmark rect by 5 pixels caused tickmarks on the overlay scrollbar to look very small. I changed this to inset by 4 pixels instead. The tickmark is the same width as the overlay scrollbar which looks much better. > > You need a 'Reviewed by' line. Is this behavior different from the mac scrollbar theme?
Fixed.
James Robinson
Comment 6
2011-08-03 14:43:21 PDT
Comment on
attachment 102827
[details]
Patch The Reviewed by line really should be just below the bug URL, but whatever
WebKit Review Bot
Comment 7
2011-08-03 15:42:58 PDT
Comment on
attachment 102827
[details]
Patch Clearing flags on attachment: 102827 Committed
r92319
: <
http://trac.webkit.org/changeset/92319
>
WebKit Review Bot
Comment 8
2011-08-03 15:43:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug