Chromium Mac: Fix position of search tickmarks https://bugs.webkit.org/show_bug.cgi?id=65575

This change adjusts the position of search tickmarks so that they are correctly centered.

Also, insetting the tickmark rect by 5 pixels caused tickmarks on the overlay scrollbar to look very small. I changed this to inset by 4 pixels instead. The tickmark is the same width as the overlay scrollbar which looks much better.

Patch by Sailesh Agrawal <sail@chromium.org> on 2011-08-03
Reviewed by James Robinson.

* platform/chromium/ScrollbarThemeChromiumMac.mm:
(WebCore::ScrollbarThemeChromiumMac::paint):

Canonical link: https://commits.webkit.org/81447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92319 268f45cc-cd09-0410-ab3c-d52691b4dbfc